# allen-ivc

./: .gitignore  CLAUDE.md  PROGRESS.md  TODO.md  allen-framework-tsmc-owners-earning.md  docker-compose.yml
.specify/memory/: constitution.md
cli/ivco-calc/: pyproject.toml
cli/ivco-calc/src/ivco_calc/: __init__.py  cagr.py  cli.py  dcf.py
cli/ivco-calc/src/ivco_calc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cli/ivco-calc/tests/: conftest.py  test_cagr.py  test_dcf.py  test_integration.py
cli/ivco-filter/: pyproject.toml
cli/ivco-filter/config/: filter-rules.json
cli/ivco-filter/src/ivco_filter/: __init__.py  cli.py  lists.py  rules.py  scorer.py
cli/ivco-filter/src/ivco_filter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cli/ivco-filter/tests/: sample-tweets.json
cms/: .env.example  package-lock.json  package.json
cms/src/: payload-types.ts  payload.config.ts
cms/src/app/(frontend)/: globals.css  (+2 more)
cms/src/collections/: Categories.ts  Companies.ts  CompanyEvents.ts  Posts.ts
docs/: DUAL_AGENT_SETUP.md  codex-connectivity-test.md  ivco-dna.md  payload-supabase-setup-guide.md  supabase-action-guide.md
docs/dna-review/: chunk-a-review.md  chunk-b-review.md  chunk-c-review.md  chunk-d-review.md  chunk-e-review.md  integration.md  master.md
docs/papers/: allen-framework-vs-buffett-owner-earnings-1986-public.md
docs/plans/: 2026-02-13-ivco-mvp-implementation-plan.md  2026-02-13-research-workflow-design.md
schemas/: payload-cms-schema.md
scripts/: collect-x-intel.sh  ivc-collect  ivco-collect
(+1 files in other folders)
